# flappy_ncurses

./: CMakeLists.txt  Dockerfile  README.md  start.sh
scripts/: build.sh  run_docker_build.sh
src/: bird.c  bird.h  main.c  pipe.c  pipe.h  pipeManager.c  pipeManager.h
